--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "dev": "webpack -d --watch",
     "build": "webpack -p"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lgpasquale/saint-peter.git"
+  },
+  "author": "lgpasquale",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
