--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.2.1"
+    "jsonwebtoken": "^7.2.1",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
