--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "lgpasquale",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.16.0",
-    "express": "^4.14.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "jsonwebtoken": "^7.2.1",
-    "sequelize": "^3.30.2"
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
