--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "saint-peter",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "saint-peter": "src/server.js"
@@ -18,18 +16,18 @@
   "author": "lgpasquale",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.15.3",
-    "jsonwebtoken": "^7.2.1",
-    "sequelize": "^3.30.2",
-    "yargs": "^8.0.2"
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "sequelize": "^4.37.10",
+    "sqlite3": "^4.0.0",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "webpack": "^1.14.0"
+    "babel-preset-react": "^6.22.0"
   }
 }
